--- a/styles.css
+++ b/styles.css
@@ -506,6 +506,10 @@ section.active-section {
     transform: scale(1.065);
 
 }
+
+
+
+
 .team-container {
     display: flex;
     flex-direction: column;
@@ -515,21 +519,38 @@ section.active-section {
 .team-row {
     display: flex;
     justify-content: center;
-    gap: 20px;
-    margin-bottom: 20px;
+    gap: 40px; /* Increased gap between members */
+    margin-bottom: 30px; /* Added margin between rows */
 }
 
 .team-member {
     text-align: center;
-    flex: 1;
+    flex: 1; /* Added to make sure each member takes equal space */
 }
 
-.sr-lead {
+.team-member img {
+    width: 300px; /* Fixed width */
+    height: 300px; /* Fixed height */
+    object-fit: cover;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
+
+.team-member h4 {
+    margin: 0;
+    font-size: 1em;
+    font-weight: bold;
+    background-color: white;
+    border-radius: 5px;
+}
+
+
+/* .sr-lead {
     width: 100%;
     height: auto;
     max-width: 200px;
     margin-bottom: 10px;
-}
+} */
 
 body {
     font-family: Arial, sans-serif;
